testdata/baselines/reference/submodule/conformance/moduleExportAssignment2.errors.txt
npm.js(1,11): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
npm.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
npm.js(3,44): error TS2300: Duplicate identifier 'tree'.
npm.js(5,5): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== npm.js (4 errors) ====
    var npm = module.exports = function (tree) {
              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    }
    module.exports.asReadInstalled = function (tree) {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                                               ~~~~
!!! error TS2300: Duplicate identifier 'tree'.
        npm(tree) // both references should be callable
        module.exports(tree)
        ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    }
    